# VisualGasic

./: .assetlib.json  .gitignore  ASSET_LIBRARY_SUBMISSION.md  ASYNC_JIT_REPL_STATUS.md  BRACKET_COMPLETION_FEATURE.txt  BUILTIN_FUNCTIONS_REFERENCE.md  CBM_COMPLETION_FEATURE.txt  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.txt  CMakeLists.txt  COMMUNITY_HUB.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATED.txt  FILE_INDEX.md  GET_STARTED.md  GITHUB_UPLOAD_CHECKLIST.md  GODOT_FUNCTIONS_REFERENCE.md  GODOT_QUICK_REF.md  IMPLEMENTATION_STATUS.md  IMPORTING_VB6.md  INSTALLATION.md  MIGRATION_GUIDE.md  MODERN_FEATURES.md  MODERN_FEATURES_README.md  MODERN_SYNTAX_QUICK_REF.md  MULTITASKING_IMPLEMENTATION_COMPLETE.md  Makefile.tests  OPTIMIZATION_RESULTS.md  PERFORMANCE_REPORT.md  PHASE_1_IMPLEMENTATION.md  PONG_FIX.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  QUICK_START_PHASE_2.md  README.md  README_DATA.md  README_FORMS.md  README_HELPERS.md  (+52 more)
Calculator-vb6-main/: README.md  calculate.frm  calculate.vbp  calculate.vbw
_backups_whenever_enhancements/: visual_gasic_ast.h  visual_gasic_instance.cpp  visual_gasic_instance.h  visual_gasic_parser.cpp  visual_gasic_parser.h  visual_gasic_tokenizer.cpp
community_support/: README.md
demo/: .current_demo  ballistic_fake.gd  bench.bas  bench.vg  bench_dict_simple.vg  bench_output.txt  check_open.gd  check_plugin_class.gd.uid  check_validate.gd  debug_pong.bas.uid  dual_kawase_bridge.gd  dual_kawase_fake.gd  dump_bytecode.gd  generate_prototypes.gd  horror_fake.gd  laser_fake.gd  lib.bas  lib.bas.uid  loop_shapes.vg  panel_demo_fake.gd  pong.bas  pong.bas.uid  pong_angle.bas  pong_angle.bas.uid  pong_angle.vg  procedural_fake.gd  project.godot  psx_fake.gd  repro_obj.bas.uid  run_advanced.gd  run_advanced.gd.uid  run_advanced_loops.gd.uid  run_angle_test.gd  run_angle_test.gd.uid  run_arrays.gd  run_benchmarks.gd  run_bool.gd  run_builtin_unit_tests.gd  run_builtins.gd  run_bytecode_tests.gd  (+127 more)
docs/: ADVANCED_FEATURES.md  ADVANCED_FEATURES_MANUAL.md  BRACKET_COMPLETION.md  BRACKET_COMPLETION_QUICK_REF.md  BUILTINS.md  DOCUMENTATION_INDEX.md  GODOT_PROGRAMMING_MANUAL.md  IMMEDIATE_WINDOW.md  VisualGasic_Language_Reference.md  index.md
examples/: AutoIndent_Prototype.ipynb  Form1.bas  Form1.bas.uid  Form1.tscn  Form1.vg.uid  Form2.bas  Form2.bas.uid  Form2.tscn  Form3.bas  Form3.bas.uid  Form3.tscn  Form4.bas  Form4.bas.uid  Form4.tscn  Form5.bas  Form5.bas.uid  Form5.tscn  Form6.bas  Form6.bas.uid  Form6.tscn  Form7.bas  Form7.bas.uid  Form7.tscn  Form7.vg.uid  Form8.bas  Form8.bas.uid  Form8.tscn  Form8.vg.uid  Form9.bas  Form9.bas.uid  Form9.tscn  Form9.vg.uid  README.md  array_sorting_demo.bas.uid  array_sorting_demo.vg.uid  (+353 more)
(+1241 files in other folders)
